se agrega objetos/arrays/css

--- a/index.html
+++ b/index.html
@@ -1,15 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primera pre-entrega</title>
+    <!--Solo la parte de css-->
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+        crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="estilos.css">
+    <title>Segunda pre-entrega🛒</title>
 </head>
-<body>
-    <h1>Bienvenidos al simulador interactivo</h1>
-    <h2>Donde comprar es muy fácil</h2>
-    <script src="codigo.js"></script>
-</body>
 
+<body>
+    <div class="container">
+        <div style="background-color: cadetblue" >
+            <h1 class="text-center">Bienvenidos al carrito interactivo 🛒</h1>
+            <h2 class="text-center"> Donde comprar es muy fácil</h2>
+        </div>
+        <div>
+            <div id="misprods" class="row" style="height: fit-content;">
+            <!-- Productos -->
+            </div>
+        <div>
+            <h4>Tu carrito:</h4>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Categoria</th>
+                        <th>Subcategoria</th>
+                        <th>Nombre</th>
+                        <th>Precio</th>
+                    </tr>
+                </thead>
+                <tbody id="tablabody">
+                    <!-- aqui tabla carrito -->
+                </tbody>
+            </table>
+            <h4 id="total">Total a pagar $:</h4>
+        </div>
+    </div>
+    <!-- JavaScript Bundle with Popper -->
+    <script 
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+
+
+    <!--mi script-->
+    <script src="productos.js"></script>
+    <script src="logica.js"></script>
+
+<footer>
+    <p>Muy fácil! Si tenés dudas, comunicate a hola@tucomprafacil.com.ar- Muchas gracias por tu compra! </p>
+    <p>© Copyright - 2023</p>
+</footer>
+</body>
 </html>
